--- a/blogs/.github/workflows/deploy-docs.yml
+++ b/blogs/.github/workflows/deploy-docs.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: npm
+          # cache: npm
 
       - name: 安装依赖
         run: npm ci
@@ -43,5 +43,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # 这是文档部署到的分支名称
-          branch: gh-pages
+          branch: aaron
           folder: src/.vuepress/dist
