--- a/workflows/deploy-docs.yml
+++ b/workflows/deploy-docs.yml
@@ -30,7 +30,7 @@ jobs:
           # cache: npm
 
       - name: 安装依赖
-        run: npm ci
+        run: npm i
 
       - name: 构建文档
         env:
@@ -43,5 +43,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # 这是文档部署到的分支名称
-          branch: aaron
+          branch: gh-pages
           folder: src/.vuepress/dist
