--- a/workflows/deploy-docs.yml
+++ b/workflows/deploy-docs.yml
@@ -11,7 +11,7 @@ permissions:
   contents: write
 
 jobs:
-  deploy-gh-pages:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -29,19 +29,16 @@ jobs:
           node-version: 20
           # cache: npm
 
-      - name: 安装依赖
-        run: npm ci
-
       - name: 构建文档
         env:
           NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
+        run: |
+          run: npm install
           npm run docs:build
-          > src/.vuepress/dist/.nojekyll
 
-      - name: 部署文档
+      - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # 这是文档部署到的分支名称
-          branch: aaron
+          branch: gh-pages
           folder: src/.vuepress/dist
