--- a/workflows/deploy-docs.yml
+++ b/workflows/deploy-docs.yml
@@ -23,10 +23,10 @@ jobs:
 
 
 
-      - name: 设置 Node.js
+      - name:  set Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
           # cache: npm
 
        - name: install
