--- a/workflows/deploy-docs.yml
+++ b/workflows/deploy-docs.yml
@@ -27,20 +27,21 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          # cache: npm
+          cache: npm
 
        - name: install
         run: 
           run: npm install
 
       - name: build
-        run: |
+        run: 
           npm run docs:build
-          > src/.vuepress/dist/.nojekyll
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # 这是文档部署到的分支名称
-          branch: gh-pages
+          branch: aaron
           folder: src/.vuepress/dist
+
+          # > src/.vuepress/dist/.nojekyll
