--- a/workflows/deploy-docs.yml
+++ b/workflows/deploy-docs.yml
@@ -41,7 +41,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # 这是文档部署到的分支名称
-          branch: aaron
+          branch: gh-pages
           folder: src/.vuepress/dist
 
           # > src/.vuepress/dist/.nojekyll
